# coquilib

./: CMakeLists.txt  README.md
cli/: README.md  cli.h  cli_example.cpp
tests/: cli_test.cpp
